update for github pages

--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
         <div id="wrapper">
             <h1>Coding Challenges</h1>
             <ul id="files" class="view-tiles">
-                <li><a href="/coding-challenge/" class="icon icon-directory" title="coding-challenge">
+                <li><a href="coding-challenge/" class="icon icon-directory" title="coding-challenge">
                         <span class="name">coding-challenge</span><span class="size"></span></a></li>
-                <li><a href="/circle-ci-tutorial/" class="icon icon-directory" title="circle-ci-tutorial">
+                <li><a href="circle-ci-tutorial/" class="icon icon-directory" title="circle-ci-tutorial">
                         <span class="name">circle-ci-tutorial</span><span class="size"></span></a></li>
             </ul>
         </div>
