update today's challenge

--- a/coding-challenge/index.html
+++ b/coding-challenge/index.html
@@ -625,6 +625,9 @@
                 <li><a href="099_neural_network_color_predictor" class="icon icon-directory"
                         title="099_neural_network_color_predictor"><span
                             class="name">099_neural_network_color_predictor</span></a></li>
+                <li><a href="100_neuroevolution_flappy_bird" class="icon icon-directory"
+                        title="100_neuroevolution_flappy_bird"><span
+                            class="name">100_neuroevolution_flappy_bird</span></a></li>
                 <li><a href="101_may_the_4th_scrolling_text" class="icon icon-directory"
                         title="101_may_the_4th_scrolling_text"><span
                             class="name">101_may_the_4th_scrolling_text</span></a></li>
@@ -647,6 +650,8 @@
                         title="117_seven_segment_display"><span class="name">117_seven_segment_display</span></a></li>
                 <li><a href="124_flocking_simulation" class="icon icon-directory" title="124_flocking_simulation"><span
                             class="name">124_flocking_simulation</span></a></li>
+                <li><a href="125_fourier_series" class="icon icon-directory" title="125_fourier_series"><span
+                            class="name">125_fourier_series</span></a></li>
                 <li><a href="131_bouncing_dvd_logo" class="icon icon-directory" title="131_bouncing_dvd_logo"><span
                             class="name">131_bouncing_dvd_logo</span></a></li>
                 <li><a href="132_fluid_simulation" class="icon icon-directory" title="132_fluid_simulation"><span
