new content: toy-neural-network

--- a/coding-challenge/index.html
+++ b/coding-challenge/index.html
@@ -1418,7 +1418,7 @@
         </li>
         <li>
           <a
-            href="142_rubiks_cube"
+            href="142_rubiks_cube/part2/"
             class="icon icon-directory"
             title="142_rubiks_cube"
           >
